5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4368/executions/1633_2918.log
== TEST (2019-04-02 19:09:54) 
-- CODE:
print=input(precoingresso:10.99)
print=input(round(desconto:20/100))
-- ERROR:
File "XXXX", line 1
    print=input(precoingresso:10.99)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:10:05) 
-- CODE:
print=input(precoingresso:10)
print=input(round(desconto:20/100))
-- ERROR:
File "XXXX", line 1
    print=input(precoingresso:10)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:11:04) 
-- CODE:
print=input(precoingresso:10.00)
print=input(round(desconto:20/100))
-- ERROR:
File "XXXX", line 1
    print=input(precoingresso:10.00)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:11:51) 
-- CODE:
print=input(round(precoingresso:10,2))
print=input(round(desconto:20/100,2))
-- ERROR:
File "XXXX", line 1
    print=input(round(precoingresso:10,2))
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:13:29) 
-- CODE:
print=round(precoingresso:10,2)
print=round(desconto:20/100,2)
-- ERROR:
File "XXXX", line 1
    print=round(precoingresso:10,2)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:13:50) 
-- CODE:
round(precoingresso:10,2)
round(desconto:20/100,2)
-- ERROR:
File "XXXX", line 1
    round(precoingresso:10,2)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:14:02) 
-- CODE:
round=(precoingresso:10,2)
round=(desconto:20/100,2)
-- ERROR:
File "XXXX", line 1
    round=(precoingresso:10,2)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:14:23) 
-- CODE:
round=(precoingresso:10)
round=(desconto:20/100,2)
-- ERROR:
File "XXXX", line 1
    round=(precoingresso:10)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:16:10) 
-- CODE:
print=round(float(precoingresso:10))
print=round(float(desconto:20/100,2))
-- ERROR:
File "XXXX", line 1
    print=round(float(precoingresso:10))
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:16:23) 
-- CODE:
print=(precoingresso:10)
print=round(float(desconto:20/100,2))
-- ERROR:
File "XXXX", line 1
    print=(precoingresso:10)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:17:01) 
-- CODE:
print=input(digite um numero:)
print=round(float(desconto:20/100,2))
-- ERROR:
File "XXXX", line 1
    print=input(digite um numero:)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:17:23) 
-- CODE:
print=input(round(digite um numero:))
print=round(float(desconto:20/100,2))
-- ERROR:
File "XXXX", line 1
    print=input(round(digite um numero:))
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:17:59) 
-- CODE:
print=input(round(digite_um_numero:))
print=round(float(desconto:20/100,2))
-- ERROR:
File "XXXX", line 1
    print=input(round(digite_um_numero:))
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:18:39) 
-- CODE:
input=round(digite_um_numero:)
print=round(float(desconto:20/100,2))
-- ERROR:
File "XXXX", line 1
    input=round(digite_um_numero:)
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:19:25) 
-- CODE:
texto=float(input(digite_um_numero:))
print=round(float(desconto:20/100,2))
-- ERROR:
File "XXXX", line 1
    texto=float(input(digite_um_numero:))
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:19:46) 
-- CODE:
texto=float(input(digite_um_numero:))
texto=round(float(desconto:20/100,2))
-- ERROR:
File "XXXX", line 1
    texto=float(input(digite_um_numero:))
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:19:59) 
-- CODE:
texto=float(input(digite um numero:))
texto=round(float(desconto:20/100,2))
-- ERROR:
File "XXXX", line 1
    texto=float(input(digite um numero:))
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:20:05) 
-- CODE:
texto=float(input(digite um numero))
texto=round(float(desconto:20/100,2))
-- ERROR:
File "XXXX", line 1
    texto=float(input(digite um numero))
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:20:27) 
-- CODE:
texto=float(input("digite um numero"))
texto=round(float(desconto:20/100,2))
-- ERROR:
File "XXXX", line 2
    texto=round(float(desconto:20/100,2))
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:20:33) 
-- CODE:
texto=float(input("digite um numero:"))
texto=round(float(desconto:20/100,2))
-- ERROR:
File "XXXX", line 2
    texto=round(float(desconto:20/100,2))
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:20:49) 
-- CODE:
texto=float(input("digite um numero: "))
texto=round(float(desconto:20/100,2))
-- ERROR:
File "XXXX", line 2
    texto=round(float(desconto:20/100,2))
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:21:08) 
-- CODE:
texto=round(input("digite um numero: "))
texto=round(float(desconto:20/100,2))
-- ERROR:
File "XXXX", line 2
    texto=round(float(desconto:20/100,2))
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:21:31) 
-- CODE:
texto=round(input("digite um numero: "))
texto=round(input(desconto:20/100,2))
-- ERROR:
File "XXXX", line 2
    texto=round(input(desconto:20/100,2))
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:21:45) 
-- CODE:
texto=round(input("digite um numero: "))
texto=round(input("desconto:20/100,2" ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    texto=round(input())
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:22:15) 
-- CODE:
texto=round(input("digite um numero: "))
texto=round(input("desconto:20/100,2" ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    texto=round(input())
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:22:36) 
-- CODE:
texto=round(input("digite um numero: "))
texto=round(input("desconto:20/100,2" ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    texto=round(input())
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:22:47) 
-- CODE:
texto=round(input("digite um numero: "))
texto=round(input("desconto:20/100,2" ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    texto=round(input())
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:23:12) 
-- CODE:
texto=round(input("digite_um_numero: "))
texto=round(input("desconto:20/100,2" ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    texto=round(input())
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:23:43) 
-- CODE:
texto=input("digite_um_numero: ")
texto=round(input("desconto:20/100,2" ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    texto=round(input())
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:24:38) 
-- CODE:
texto=input("digite_um_numero: ")
texto=round(input("desconto:20/100,2: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    texto=round(input())
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:28:41) 
-- CODE:
texto1=input("digite_um_numero: ")
texto2=input("desconto:20/100,2: ")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    texto=round(input())
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:29:19) 
-- CODE:
texto1=input("digite_um_numero: ")
texto2=input(round("desconto:20/100,2: "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    texto2=input(round("desconto:20/100,2: "))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:29:50) 
-- CODE:
texto1=input("digite_um_numero: ")
texto2=input(float("desconto:20/100,2: "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    texto2=input(float("desconto:20/100,2: "))
ValueError: could not convert string to float: 'desconto:20/100,2: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:30:14) 
-- CODE:
texto1=input("digite_um_numero: ")
texto2=input("desconto:20/100: ")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    texto2=input(float("desconto:20/100,2: "))
ValueError: could not convert string to float: 'desconto:20/100,2: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:30:45) 
-- CODE:
texto1=input("digite_um_numero: ")
texto2=float(input("desconto:20/100: "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    texto2=input(float("desconto:20/100,2: "))
ValueError: could not convert string to float: 'desconto:20/100,2: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:32:30) 
-- CODE:
texto1=input("digite_um_numero: ")
texto2=input("desconto:20/100 ")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    texto2=input(float("desconto:20/100,2: "))
ValueError: could not convert string to float: 'desconto:20/100,2: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:35:25) 
-- CODE:
texto1=input("digite_um_numero: ")
texto2=input("desconto:20/100 ")
texto3=input(round(texto1-(texto*(texto2)): ))

-- ERROR:
File "XXXX", line 3
    texto3=input(round(texto1-(texto*(texto2)): ))
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:35:35) 
-- CODE:
texto1=input("digite_um_numero: ")
texto2=input("desconto:20/100 ")
texto3=input(round(texto1-(texto*(texto2)): )

-- ERROR:
File "XXXX", line 3
    texto3=input(round(texto1-(texto*(texto2)): )
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:36:00) 
-- CODE:
texto1=input("digite_um_numero: ")
texto2=input("desconto:20/100 ")
texto3=input(round() )

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    texto3=input(round() )
TypeError: Required argument 'number' (pos 1) not found
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
